# crc_stream

./: .gitignore  README.md  pyproject.toml
docs/: specifications.md
golden/: CRC_stream.v  fifo.v
sources/: CRC_stream.v  crc_engine.v  fifo.v
tests/: test_crc_stream_hidden.py
